# anubis-dashboard

./: .gitignore  README.md
backend/: .gitignore  CMakeLists.txt  download.hpp  files.cpp  files.hpp  main.cpp  md5.hpp  notes.cpp  notes.hpp  socket.cpp  sysctl.cpp
backend/control/: uno.cpp
backend/scripts/: build.sh
backend/src/: CMakeLists.txt  database.cpp  database.hpp  download.cpp  files.cpp  files.hpp  main.cpp  md5.cpp  notes.cpp  notes.hpp  socket.cpp
backend/src/actions/: CMakeLists.txt  action.hpp
backend/src/control/: CMakeLists.txt  volume.cpp
backend/src/methods/: get.cpp  get.hpp  method.cpp  method.hpp  task.hpp
backend/src/socket/: CMakeLists.txt  client.cpp  client.hpp  exceptions.cpp  exceptions.hpp  handler.cpp  handler.hpp  pool.cpp  pool.hpp  socket.cpp  socket.hpp  utils.hpp
backend/src/tools/: utils.hpp
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: Dashboard.vue  Files.vue  Layout.vue  Music.vue  NavBar.vue  Upload.vue
frontend/src/components/utilities/: Calculator.vue  Notes.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/types/: audio.js  general.js  index.js  video.js
frontend/src/views/: UtilsView.vue
